force-app/main/default/objects/Large_Scale_Issue__c/Large_Scale_Issue__c.object-meta.xml
<CustomObject>
    <label>Large Scale Issue</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Large Scale Issue</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Large Scale Issues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>