force-app/main/default/objects/Large_Scale_Issue__c/fields/Abatement_Sent__c.field-meta.xml
<CustomField>
    <fullName>Abatement_Sent__c</fullName>
    <label>Abatement Sent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Needed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>