force-app/main/default/objects/Large_Scale_Issue__c/fields/Agency_Information__c.field-meta.xml
<CustomField>
    <fullName>Agency_Information__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agency Information</label>
    <referenceTo>Agency_Information__c</referenceTo>
    <relationshipLabel>Large Scale Issues</relationshipLabel>
    <relationshipName>Large_Scale_Issues</relationshipName>
    <type>Lookup</type>
</CustomField>