force-app/main/default/objects/Large_Scale_Issue__c/fields/Date_Abatement_Sent__c.field-meta.xml
<CustomField>
    <fullName>Date_Abatement_Sent__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Abatement Sent</label>
    <type>Date</type>
</CustomField>