force-app/main/default/objects/Large_Scale_Issue__c/fields/JIRA_ID__c.field-meta.xml
<CustomField>
    <fullName>JIRA_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>JIRA ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>