force-app/main/default/objects/Large_Scale_Issue__c/fields/Link_To_Abatement__c.field-meta.xml
<CustomField>
    <fullName>Link_To_Abatement__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Link To Abatement</label>
    <type>Url</type>
</CustomField>