force-app/main/default/objects/Large_Scale_Issue__c/fields/Link_to_help_Center_Article__c.field-meta.xml
<CustomField>
    <fullName>Link_to_help_Center_Article__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Link To Help Center Article</label>
    <type>Url</type>
</CustomField>