force-app/main/default/objects/Large_Scale_Issue__c/fields/Link_to_Recovery_JIRA__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Recovery_JIRA__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Link to Recovery JIRA</label>
    <type>Url</type>
</CustomField>