force-app/main/default/objects/Large_Scale_Issue__c/fields/Potential_Penalty__c.field-meta.xml
<CustomField>
    <fullName>Potential_Penalty__c</fullName>
    <label>Potential Penalty</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>