force-app/main/default/objects/Large_Scale_Issue__c/fields/Root_Cause__c.field-meta.xml
<CustomField>
    <fullName>Root_Cause__c</fullName>
    <label>Root Cause</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TaxOps</fullName>
            </value>
            <value>
                <fullName>EPD</fullName>
            </value>
            <value>
                <fullName>Compliance</fullName>
            </value>
            <value>
                <fullName>Agency</fullName>
            </value>
            <value>
                <fullName>MasterTax</fullName>
            </value>
            <value>
                <fullName>Tumbleweed</fullName>
            </value>
            <value>
                <fullName>Symmetry</fullName>
            </value>
            <value>
                <fullName>USPS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>