force-app/main/default/objects/Large_Scale_Issue__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Identification</fullName>
            </value>
            <value>
                <fullName>Verification</fullName>
            </value>
            <value>
                <fullName>Root Cause</fullName>
            </value>
            <value>
                <fullName>Internal Remediation</fullName>
            </value>
            <value>
                <fullName>External Remediation</fullName>
            </value>
            <value>
                <fullName>Post Mortem</fullName>
            </value>
            <value>
                <fullName>Done</fullName>
            </value>
            <value>
                <fullName>Reject</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>