force-app/main/default/objects/Large_Scale_Issue__c/fields/Sub_Root_Cause__c.field-meta.xml
<CustomField>
    <fullName>Sub_Root_Cause__c</fullName>
    <label>Sub Root Cause</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Root_Cause__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Research Error</fullName>
            </value>
            <value>
                <fullName>TaxOps - Manual Error</fullName>
            </value>
            <value>
                <fullName>EPD - Manual Error</fullName>
            </value>
            <value>
                <fullName>Bug</fullName>
            </value>
            <value>
                <fullName>Regression</fullName>
            </value>
            <value>
                <fullName>Research</fullName>
            </value>
            <value>
                <fullName>Compliance - Manual Error</fullName>
            </value>
            <value>
                <fullName>Processing</fullName>
            </value>
            <value>
                <fullName>Technical Failure</fullName>
            </value>
            <value>
                <fullName>Human Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>